--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "jsonschema >=4.16.0",
     "pandas >=1.5.0",
     "pyarrow >=9.0.0",
+    "dask >= 2022.9.2"
 ]
 
 [project.urls]
