--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -2,8 +2,6 @@ name: Upload to PyPI
 
 on:
   push:
-    branches:
-      - main
     tags:
       - "[0-9]+.[0-9]+.[0-9]+"
 
@@ -12,6 +10,7 @@ permissions:
 
 jobs:
   deploy:
+    name: Deploy to PyPI
     runs-on: ubuntu-latest
 
     steps:
